--- a/src/app/modules/aboutus/aboutus/aboutus.component.html
+++ b/src/app/modules/aboutus/aboutus/aboutus.component.html
@@ -19,5 +19,10 @@
       and an uncompromising dedication to excellence. Each fragrance in our
       collection is created with the purest materials found in nature.
     </p>
+    <p class="disclaimer">
+      All perfume photos from the website are taken from
+      <a href="https://xerjoff.com/">www.xerjoff.com</a>. Website logo created
+      by Smashicons at <a href="https://www.flaticon.com/">www.flaticon.com</a>.
+    </p>
   </div>
 </div>
